# opencv_smallfry

./: blink.cpp  condens2.cpp  curl.cpp  eyes.cpp  facerec_online.cpp  facerec_online.py  gas.cpp  gldemo.cpp  hep.cpp  ica.cpp  kalman.cpp  mjpg_serve.cpp  mjpg_serve.py  openpose-multi.cpp  profile.h  readme.md  skin.cpp  snake.cpp  stegano.cpp  vibe.cpp  violentFlow.cpp  zernike.cpp  zoom.cpp
audio_landmarks3d/: eigen_vectors.npy  lm.cpp  lm.py  lm.yml  mean.npy  readme.md  tcboost.npy  to_onnx.py  wsgi.py
bow/: BOWKmajorityTrainer.cpp  BOWKmajorityTrainer.h  bow.py  cbir.cpp  dnn2.cpp  fisher.cpp  main.cpp  readme.md  vlad_dnn.cpp  vlad_dnn2.cpp  vlad_multivoc.cpp
chili/: Makefile  Procfile  build.cv.3.sh  build.cv.30.sh  build.cv.sh  build.java.3.sh  build.java.30.sh  build.java.sh  build.kotlin.3.sh  build.lib.sh  build.sh  build.xml  build_30.sh  index.html  ocv2.html  readme.md  requirements.txt  srv.py
cluster/: brute_random.cpp  cluster.cpp  cluster.h  cluster_un.cpp  dbscan.cpp  kmeans_flann.cpp  main.cpp  makefile  whispers.cpp
colab/: 15756433142023833.py  arcface_ir50.py  bts_pytorch.py  copy_of_darknet.py  copy_of_pix2pix.py  cv2_cuda(1).py  cyclegan_face.py  (+35 more)
tracking/: CMakeLists.txt  bench_result.txt  benchmark.cpp  makefile  readme.md  samples_utility.hpp
tracking/bacf/: bacf.cpp  bacf.hpp
tracking/cmt/: CMT.cpp  cmt.hpp
tracking/cmt/fastcluster/: fastcluster.cpp  fastcluster.h
tracking/ct/: CompressiveTracker.cpp  CompressiveTracker.hpp
tracking/dat/: dat_tracker.cpp  dat_tracker.hpp  readme.md
tracking/staple/: staple_tracker.cpp
(+372 files in other folders)
